--- a/src/scss/obsidian/checklists.scss
+++ b/src/scss/obsidian/checklists.scss
@@ -1,11 +1,11 @@
 /* Checklists, task lists, checkboxes */
 :root {
-  --checkbox-size:18px;
+  --checkbox-size:17px;
   --checkbox-icon:20px;
   --checkbox-radius:50%;
-  --checkbox-top:3px;
+  --checkbox-top:2px;
   --checkbox-left:0px;
-  --checkbox-margin:0px 5px 0px -1.35em;
+  --checkbox-margin:0px 6px 0px -1.35em;
 }
 .checkbox-square {
   --checkbox-size:15px;
@@ -19,7 +19,7 @@ input[type=checkbox] {
   -webkit-appearance:none;
   appearance:none;
   border-radius:var(--checkbox-radius);
-  border:1px solid var(--background-modifier-border-hover);
+  border:1px solid var(--text-faint);
   padding:0;
   margin:0 6px 0 0;
   width:var(--checkbox-size);
@@ -28,7 +28,7 @@ input[type=checkbox] {
 input[type=checkbox]:hover,
 input[type=checkbox]:focus {
   outline:0;
-  border-color:var(--background-modifier-border-focus);
+  border-color:var(--text-muted);
 }
 .checklist-plugin-main .group .compact > .toggle .checked,
 .is-flashing input[type=checkbox]:checked,
